<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpspace_title" translatable="false">DerpSpace</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="icons_category">Icons</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="listview">ListView</string>
    <string name="light_category">Lights</string>
    <string name="udfps_category">Fingerprint On Display</string>
    <string name="general_tweaks_title">General settings</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="general_category">General</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="misc_derpspace_title">Miscellaneous</string>
    <string name="navigationbar_settings_title">Navigation Bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="footer_category">Footer</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="customisation_title">Customisation</string>
    <string name="battery_title">Battery</string>
    <string name="battery_category">Battery light</string>
    <string name="derpspace_dialog_title">Help us help you!</string>
    <string name="derpspace_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="derpspace_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="qs_tile_vibration_title">Vibration</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="quick_settings_vibrate_duration_title">Vibration duration</string>
    <string name="quick_settings_vibrate_duration_summary">How many milliseconds to vibrate</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Customise heads up notifications settings</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="heads_up_snooze_25min">25 minutes</string>
    <string name="heads_up_snooze_30min">30 minutes</string>
    <string name="heads_up_snooze_1h">1 hour</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="statusbar_clock_style_title">Clock &amp; date position</string>
    <string name="statusbar_clock_style_right">Right</string>
    <string name="statusbar_clock_style_centre">Centre</string>
    <string name="statusbar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="alert_slider_notifications_title">Alert slider notifications</string>
    <string name="alert_slider_notifications_summary">Display notification when changing alert slider position</string>
    <string name="burnin_category">Burn-in Protection</string>
    <string name="burn_in_protection_title">Enable</string>
    <string name="burn_in_protection_summary">Shift navbar and statusbar icons to prevent burn-in</string>
    <string name="burn_in_protection_interval_title">Interval of shift</string>
    <string name="unit_x1000ms">x1000 ms</string>
    <string name="use_photos_spoof_title">Unlimited Google photo storage</string>
    <string name="use_photos_spoof_summary">Your device will be identified as a Pixel XL to get unlimited Google photo storage at original quality</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
    <string name="use_games_spoof_title">Unlock higher FPS in games</string>
    <string name="use_games_spoof_summary">Spoof your device as different model for specific games to unlock higher FPS</string>
    <string name="netflix_spoof_title">Netflix spoof</string>
    <string name="netflix_spoof_summary">Spoof your device as different model for Netflix</string>
    <string name="spoof_custom">Spoofing</string>
     <string name="lab">Laboratory</string>
</resources>